Update and rename media-site_index.html to index.html

--- a/media-site/index.html
+++ b/media-site/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>媒体画廊 — DavidSciMeow</title>
+  <title>我的图片（O w O）</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <header class="topbar">
     <div class="brand">
       <img src="/my.svg" alt="logo" class="logo" onerror="this.style.display='none'"/>
-      <h1>我的媒体画廊</h1>
+      <h1>我的图片</h1>
     </div>
     <div class="search">
       <input id="globalSearch" placeholder="搜索文件名 / 标签..." aria-label="搜索媒体" />
